# serializer version: 1
# name: test_matches_expected_type
  dict({
    'date_created': datetime,
    'nested': dict({
      'id': int,
    }),
    'nested_id': 5,
    'some_uuid': UUID,
  })
# ---
# name: test_matches_non_deterministic_snapshots
  dict({
    'a': UUID(...),
    'b': dict({
      'b_1': 'This is deterministic',
      'b_2': datetime.datetime(...),
    }),
    'c': list([
      'Your wish is my command',
      'Do not replace this one',
    ]),
  })
# ---
# name: test_matches_non_deterministic_snapshots.1
  dict({
    'a': UUID('06335e84-2872-4914-8c5d-3ed07d2a2f16'),
    'b': dict({
      'b_1': 'This is deterministic',
      'b_2': datetime.datetime(2020, 5, 31, 0, 0),
    }),
    'c': list([
      'Replace this one',
      'Do not replace this one',
    ]),
  })
# ---
# name: test_matches_regex_in_regex_mode
  dict({
    'any_number': int,
    'any_number_adjacent': str,
    'data': dict({
      'list': list([
        dict({
          'date_created': datetime,
          'k': '1',
        }),
        dict({
          'date_created': datetime,
          'k': '2',
        }),
      ]),
    }),
    'specific_number': 5,
  })
# ---
# name: test_raises_unexpected_type
  dict({
    'date_created': datetime,
    'date_updated': datetime.date(2020, 6, 1),
    'nested': dict({
      'id': int,
    }),
    'some_uuid': UUID,
  })
# ---
# name: test_regex_matcher_str_value
  dict({
    'data': dict({
      'any_number': 3,
      'any_string': 'hello',
      'list': list([
        dict({
          'id': UUID,
          'k': '1',
        }),
        dict({
          'id': UUID,
          'k': '2',
        }),
      ]),
    }),
    'dir': '<tmp-path>/test_regex_matcher_str_value0',
  })
# ---
